# rules_helm2

./: .bazelrc  .bazelversion  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  internal_deps.bzl  version.bzl
.github/workflows/: ci.yaml  release.yml
docs/: BUILD.bazel  deps.md  rules.md  toolchain.md
example/app/: BUILD.bazel  main.go
example/chart/: BUILD.bazel  Chart.yaml  README.md
example/genrule/: BUILD.bazel
example/repackage/: BUILD.bazel
helm/: BUILD.bazel  defs.bzl  deps.bzl  go_deps.bzl  repositories.bzl  toolchain.bzl
helm/private/: BUILD.bazel  toolchains_repo.bzl
helm/private/rules/: BUILD.bazel  chart.bzl  helper.go  import.bzl  install.bzl  lint.bzl  template.bzl
