load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@bazel_tools//tools/build_rules:test_rules.bzl", "rule_test")

genrule(
    name = "get_values",
    outs = ["values.yaml"],
    cmd = "$(HELM_BIN) show values redis --repo https://charts.bitnami.com/bitnami --version 16.12.2 > $@",
    toolchains = ["@helm3_7_1_toolchains//:resolved_toolchain"],
    tools = ["@helm3_7_1_toolchains//:resolved_toolchain"],
)

rule_test(
    name = "get_values_test",
    generates = ["values.yaml"],
    rule = ":get_values",
)

write_file(
    name = "show_values_bin",
    out = "expected",
    content = ["cat example/genrule/values.yaml"],
)

sh_binary(
    name = "show_values",
    srcs = [":show_values_bin"],
    data = [":get_values"],
)
