load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

filegroup(
    name = "package_content",
    srcs = glob([
        "*.bzl",
        "*.bazel",
    ]) + [
        "//helm/private/rules:package_content",
    ],
    visibility = ["//helm:__pkg__"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//helm:__subpackages__"],
)
