"Internal implementation details"

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "helper",
    srcs = ["helper.go"],
    visibility = ["//visibility:public"],
    deps = ["@sigs_k8s_io_yaml//:go_default_library"],
)

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

filegroup(
    name = "package_content",
    srcs = glob([
        "*.bzl",
        "*.bazel",
        "helper.go",
    ]),
    visibility = ["//helm/private:__pkg__"],
)

bzl_library(
    name = "helm_chart",
    srcs = ["chart.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@io_bazel_rules_docker//container:providers.bzl",
    ],
)

bzl_library(
    name = "helm_install",
    srcs = ["install.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@io_bazel_rules_docker//container:providers.bzl",
    ],
)

bzl_library(
    name = "helm_import",
    srcs = ["import.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "helm_lint",
    srcs = ["lint.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "helm_template",
    srcs = ["template.bzl"],
    visibility = ["//:__subpackages__"],
)
